Send  DNS request over TCP Bug fixed Minor Correction

--- a/dns_proxy.conf
+++ b/dns_proxy.conf
@@ -1,5 +1,8 @@
+# 0=tcp  or 1=socks
+dns_mode = 0
+
 # set the port of the socks proxy
-socks_port = 9050
+socks_port = 9020
 
 # set the address of the socks proxy
 socks_addr = 127.0.0.1
@@ -11,10 +14,10 @@ listen_addr = 127.0.0.1
 listen_port = 53
 
 # set the username to drop to
-set_user = nobody
+set_user = root
 
 # set the group name to drop to
-set_group = nobody
+set_group = root
 
 # file to read as resolv.conf
 resolv_conf = resolv.conf
