--- a/dns_proxy.conf
+++ b/dns_proxy.conf
@@ -2,7 +2,7 @@
 dns_mode = 0
 
 # set the port of the socks proxy
-socks_port = 9020
+socks_port = 9050
 
 # set the address of the socks proxy
 socks_addr = 127.0.0.1
@@ -14,10 +14,10 @@ listen_addr = 127.0.0.1
 listen_port = 53
 
 # set the username to drop to
-set_user = root
+set_user = nobody
 
 # set the group name to drop to
-set_group = root
+set_group = nobody
 
 # file to read as resolv.conf
 resolv_conf = resolv.conf
